# ChessSDL

./: .gitignore  README.md
project/: CMakeLists.txt  main.cpp
project/src/: CMakeLists.txt  test.cpp  test.h
